mobile overflow issue seems to be solved

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ a:hover {
 
 .main {
     position: relative;
-    /* padding: 40px; */
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -30,7 +29,6 @@ a:hover {
 }
 
 .intro {
-    /* padding: 10px; */
     margin: 20px;
     width: 500px;
 }
@@ -456,6 +454,12 @@ footer a {
     font-weight: bold;
 }
 
+@media (max-width:1040px){
+    .myprojects .projectCard {
+        flex-direction: column;
+    }
+}
+
 @media(max-width: 970px) {
     .avatar {
         display: none;
@@ -504,10 +508,12 @@ footer a {
 @media(max-width: 640px) {
     .intro h1 {
         font-size: 10vw;
+        letter-spacing: 1px;
     }
 
     .intro p {
         font-size: 6vw;
+        letter-spacing: 1px;
     }
 
     .intro span {
@@ -518,17 +524,22 @@ footer a {
         width: 30vw;
         right: 10px;
     }
-
+    .main{
+        height: 90vh;
+    }
     .main .downArrow {
         width: 35px;
     }
-
+    .about{
+        margin-top: 10vh;
+    }
     .aboutme {
         padding: 10px;
     }
 
     .aboutme p {
         font-size: 6vw;
+        letter-spacing: 1px ;
         text-align: left;
     }
 
